RESOLVED FIXED145923
Fix mismatched-tags warning in Source/WebKit2/UIProcess/gtk/InputMethodFilter.h
https://bugs.webkit.org/show_bug.cgi?id=145923
Summary Fix mismatched-tags warning in Source/WebKit2/UIProcess/gtk/InputMethodFilter.h
Csaba Osztrogonác
Reported 2015-06-12 04:33:09 PDT
../../Source/WebCore/platform/gtk/CompositionResults.h:33:1: warning: 'CompositionResults' defined as a struct here but previously declared as a class [-Wmismatched-tags] struct CompositionResults { ^ ../../Source/WebKit2/UIProcess/gtk/InputMethodFilter.h:33:1: note: did you mean struct here? class CompositionResults; ^~~~~ struct 1 warning generated. It is a regression comes from http://trac.webkit.org/changeset/185415 .
Attachments
Patch (1.14 KB, patch)
2015-06-12 04:34 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-06-12 04:34:02 PDT
Carlos Garcia Campos
Comment 2 2015-06-12 04:59:00 PDT
Comment on attachment 254792 [details] Patch Oops, thanks!
WebKit Commit Bot
Comment 3 2015-06-12 05:47:57 PDT
Comment on attachment 254792 [details] Patch Clearing flags on attachment: 254792 Committed r185498: <http://trac.webkit.org/changeset/185498>
WebKit Commit Bot
Comment 4 2015-06-12 05:48:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.