Fix mismatched-tags warning in Source/WebKit2/UIProcess/gtk/InputMethodFilter.h https://bugs.webkit.org/show_bug.cgi?id=145923

Reviewed by Carlos Garcia Campos.

* UIProcess/gtk/InputMethodFilter.h:


Canonical link: https://commits.webkit.org/163963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185498 268f45cc-cd09-0410-ab3c-d52691b4dbfc